Fix horizontal scroll bar

--- a/resources/assets/sass/pages/_review.scss
+++ b/resources/assets/sass/pages/_review.scss
@@ -249,7 +249,6 @@ section {
                 font-size: 13px;
                 margin-left: 100px;
                 margin-top: 30px;
-                width: 100%;
                 text-align: left;
                 .fa {
                     padding-left: 1px;
